--- a/.gitignore
+++ b/.gitignore
@@ -42,9 +42,9 @@ yarn-error.log*
 next-env.d.ts
 
 # Hardhat / Solidity development
-/cache/
-/artifacts/
-/typechain-types/
+cache/
+artifacts/
+typechain-types/
 
 # Foundry
 broadcast/
